--- a/ToroBank/BankToro.Test/BankToro.Test.csproj
+++ b/ToroBank/BankToro.Test/BankToro.Test.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\ToroBank.Core\ToroBank.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Core\" />
+  </ItemGroup>
+
 </Project>
