Add references in application layer

--- a/ToroBank/ToroBank.Application/ToroBank.Application.csproj
+++ b/ToroBank/ToroBank.Application/ToroBank.Application.csproj
@@ -8,4 +8,8 @@
     <Folder Include="UseCases\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ToroBank.Core\ToroBank.Core.csproj" />
+  </ItemGroup>
+
 </Project>
