move dtos and interfaces to application layer

--- a/ToroBank/ToroBank.Api/ToroBank.Api.csproj
+++ b/ToroBank/ToroBank.Api/ToroBank.Api.csproj
@@ -4,5 +4,11 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ToroBank.Application\ToroBank.Application.csproj" />
+    <ProjectReference Include="..\ToroBank.Core\ToroBank.Core.csproj" />
+    <ProjectReference Include="..\ToroBank.Infrastructure\ToroBank.Infrastructure.csproj" />
+  </ItemGroup>
+
 
 </Project>
