--- a/ToroBank/ToroBank.Application/ToroBank.Application.csproj
+++ b/ToroBank/ToroBank.Application/ToroBank.Application.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Dto\UseCaseResponses\" />
     <Folder Include="UseCases\" />
   </ItemGroup>
 
