--- a/ToroBank/ToroBank.Infrastructure/ToroBank.Infrastructure.csproj
+++ b/ToroBank/ToroBank.Infrastructure/ToroBank.Infrastructure.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.24" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ToroBank.Application\ToroBank.Application.csproj" />
   </ItemGroup>
 
