--- a/ToroBank/ToroBank.Infrastructure/ToroBank.Infrastructure.csproj
+++ b/ToroBank/ToroBank.Infrastructure/ToroBank.Infrastructure.csproj
@@ -6,7 +6,13 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.24" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.24" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.24" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.24" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="3.1.24" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.24" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.24" />
   </ItemGroup>
 
   <ItemGroup>
